--- a/css/webinar_maduracion.css
+++ b/css/webinar_maduracion.css
@@ -332,37 +332,84 @@ body {
 }
 
 /* -------- */
-
 .article1 {
-
+    position: relative;
     width: 100%;
     height: 250px;
-    background-color: #00AE45;
+    background-image: url('../assets/section.jpg');
+    background-size: cover;
+}
+
+.article1::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); /* Color oscuro con transparencia */
 }
 
 .article1 h2 {
-
+    position: relative;
     text-transform: uppercase;
-    color: #f5f5f5;
+    color: #ffffff; /* Color de texto blanco */
     text-align: center;
-    padding: 50px;
-    font-size: 40px;
+    padding: 40px;
+    font-size: 38px;
 }
 
 .article2 {
-
+    position: relative;
     width: 100%;
     height: 250px;
-    background-color: #005E6C;
+    background-image: url('../assets/vertical.jpg');
+    background-size: cover;
+}
+
+.article2::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); /* Color oscuro con transparencia */
 }
 
 .article2 h2 {
-
+    position: relative;
     text-transform: uppercase;
-    color: #fff;
+    color: #ffffff; /* Color de texto blanco */
     text-align: center;
-    padding: 50px;
-    font-size: 50px;
+    padding: 40px;
+    font-size: 38px;
+}
+.article3 {
+    position: relative;
+    width: 100%;
+    height: 250px;
+    background-image: url('../assets/im002.jpeg');
+    background-size: cover;
+}
+
+.article3::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); /* Color oscuro con transparencia */
+}
+
+.article3 h2 {
+    position: relative;
+    text-transform: uppercase;
+    color: #ffffff; /* Color de texto blanco */
+    text-align: center;
+    padding: 40px;
+    font-size: 38px;
 }
 
 .section_5 {
@@ -407,7 +454,7 @@ body {
     text-align: center;
     margin-top: 50px;
     margin-bottom: 50px;
-    border-radius: 20px;
+  
     background-size: cover;
     color: #fff;
 }
@@ -415,7 +462,7 @@ body {
 .container::before {
     content: "";
     position: absolute;
-    border-radius: 20px;
+   
     top: 0;
     left: 0;
     width: 100%;
@@ -460,6 +507,33 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.section_8 {
+    position: relative;
+    width: 100%;
+    height: 250px;
+    background-image: url('../assets/im002.jpeg');
+    background-size: cover;
+}
+
+.section_8::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); /* Color oscuro con transparencia */
+}
+
+.section_8 h2 {
+    position: relative;
+    text-transform: uppercase;
+    color: #ffffff; /* Color de texto blanco */
+    text-align: center;
+    padding: 40px;
+    font-size: 38px;
 }
 
 
@@ -646,11 +720,15 @@ a {
         padding: 20px;
     }
     .article1 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 100%;
         height: 100%;
     }
 
-    .article1 h3 {
+    .article1 h2 {
+        text-align: center;
         font-size: 20px;
         width: 100%; 
     }
@@ -694,10 +772,13 @@ a {
         font-size: 25px;
         
     }
-    .fecha {
-        width: 80%;
+    .article3{
+        width: 100%;
+        height: 100%;
+    }
+    .article3 h2 {
+        font-size: 20px;
         padding: 20px;
-        
     }
 
     /* Formulario de contacto */
@@ -746,7 +827,7 @@ a {
 
     .section_8{
         width: 100%;
-        height: 200px;
+        height: 230px;
     }
     .section_8 h2{
         
