--- a/css/webinar_maduracion.css
+++ b/css/webinar_maduracion.css
@@ -104,19 +104,21 @@ body {
 /* ============================================ */
 /* Secciones */
 
-.linea{
+.linea {
     width: 100%;
     height: 20px;
-    background-color:#005C6C;
+    background-color: #005C6C;
 
 }
-.linea1{
+
+.linea1 {
     width: 100%;
     height: 20px;
     background-color: #009AA9;
 
 }
-.linea2{
+
+.linea2 {
     width: 100%;
     height: 20px;
     background-color: #00AE45;
@@ -148,7 +150,7 @@ body {
 
 
 .card {
-    
+
     margin: auto;
     max-width: 1200px;
     padding: 50px;
@@ -203,23 +205,24 @@ body {
 /* -------- */
 
 
-.imagen{
+.imagen {
     position: relative;
     transition: all .3s ease;
 }
-.imagen img{
-    
+
+.imagen img {
+
     box-shadow: 0 60px 60px -60px rgba(0, 30, 255, 0.5);
     border-radius: 4px;
     object-fit: cover;
-    
+
 }
 
-.imagen p{
+.imagen p {
     color: #fff;
     position: absolute;
     width: 200px;
-    top : 50%;
+    top: 50%;
     bottom: 0;
     left: 0;
     right: 0;
@@ -227,41 +230,37 @@ body {
     transform: translateY(25%);
     transition: .3s ease;
     opacity: 0;
-    
+
 }
 
 .imagen:hover {
-   transform: 
-   perspective(250px)
-   rotateX(10deg)
-   translateY(-5%)
-   translateZ(0);
+    transform:
+        perspective(250px) rotateX(10deg) translateY(-5%) translateZ(0);
 }
 
-.imagen::before{
+.imagen::before {
     content: '';
     position: absolute;
     bottom: 0;
     height: 100%;
     width: 100%;
-    background-image: linear-gradient(
-        to bottom,
-        rgba(0, 0, 0, 0.5) 50%,
-        rgba(0, 0, 0) 96%
-    );
+    background-image: linear-gradient(to bottom,
+            rgba(0, 0, 0, 0.5) 50%,
+            rgba(0, 0, 0) 96%);
     opacity: 0;
     transition: all .3s ease;
 }
 
-.imagen:hover::before{
+.imagen:hover::before {
     opacity: 1;
 }
 
-.imagen:hover p{
+.imagen:hover p {
     text-align: center;
     opacity: 1;
     transform: translateY(25%);
 }
+
 /* --------- */
 .section_4 span {
     padding: 3px;
@@ -335,7 +334,7 @@ body {
 .article1 {
     position: relative;
     width: 100%;
-    height: 250px;
+    
     background-image: url('../assets/section.jpg');
     background-size: cover;
 }
@@ -347,13 +346,15 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Color oscuro con transparencia */
+    background-color: rgba(0, 0, 0, 0.7);
+    /* Color oscuro con transparencia */
 }
 
 .article1 h2 {
     position: relative;
     text-transform: uppercase;
-    color: #ffffff; /* Color de texto blanco */
+    color: #ffffff;
+    /* Color de texto blanco */
     text-align: center;
     padding: 40px;
     font-size: 38px;
@@ -374,17 +375,20 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Color oscuro con transparencia */
+    background-color: rgba(0, 0, 0, 0.7);
+    /* Color oscuro con transparencia */
 }
 
 .article2 h2 {
     position: relative;
     text-transform: uppercase;
-    color: #ffffff; /* Color de texto blanco */
+    color: #ffffff;
+    /* Color de texto blanco */
     text-align: center;
     padding: 40px;
     font-size: 38px;
 }
+
 .article3 {
     position: relative;
     width: 100%;
@@ -400,13 +404,15 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Color oscuro con transparencia */
+    background-color: rgba(0, 0, 0, 0.7);
+    /* Color oscuro con transparencia */
 }
 
 .article3 h2 {
     position: relative;
     text-transform: uppercase;
-    color: #ffffff; /* Color de texto blanco */
+    color: #ffffff;
+    /* Color de texto blanco */
     text-align: center;
     padding: 40px;
     font-size: 38px;
@@ -420,7 +426,7 @@ body {
 
 .section_5 h2 {
     padding: 10px;
-    
+
     text-transform: uppercase;
     color: #fff;
     text-align: center;
@@ -454,7 +460,7 @@ body {
     text-align: center;
     margin-top: 50px;
     margin-bottom: 50px;
-  
+
     background-size: cover;
     color: #fff;
 }
@@ -462,7 +468,7 @@ body {
 .container::before {
     content: "";
     position: absolute;
-   
+
     top: 0;
     left: 0;
     width: 100%;
@@ -493,7 +499,7 @@ body {
     text-align: center;
 }
 
-.section_7{
+.section_7 {
     margin: auto;
     display: flex;
     width: 1180px;
@@ -501,7 +507,8 @@ body {
     margin-bottom: 20px;
 
 }
-.section_7 img{
+
+.section_7 img {
     border-radius: 10px;
     margin: auto;
     width: 100%;
@@ -524,13 +531,15 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Color oscuro con transparencia */
+    background-color: rgba(0, 0, 0, 0.7);
+    /* Color oscuro con transparencia */
 }
 
 .section_8 h2 {
     position: relative;
     text-transform: uppercase;
-    color: #ffffff; /* Color de texto blanco */
+    color: #ffffff;
+    /* Color de texto blanco */
     text-align: center;
     padding: 40px;
     font-size: 38px;
@@ -544,7 +553,8 @@ body {
     height: 150px;
     background-color: #00AE45;
 }
-.section_8 h2{
+
+.section_8 h2 {
     text-align: center;
     text-transform: uppercase;
     font-size: 30px;
@@ -561,7 +571,8 @@ body {
     height: 180px;
 
 }
-.section_9 a{
+
+.section_9 a {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -575,11 +586,12 @@ body {
     color: #fff;
     transition: all 0.3s;
 }
-.section_9 a:hover{
+
+.section_9 a:hover {
     background-color: #00AE45;
     color: #fff;
-    transform: scale( 1.1);
-    
+    transform: scale(1.1);
+
 }
 
 
@@ -651,6 +663,33 @@ a {
     text-decoration: none;
 }
 
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border: 1px solid #000000;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+}
+
+.popup-content {
+    text-align: center;
+}
+
+.close {
+    padding-top: 0;
+    width: 30px;
+    color: #000;
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 50px;
+}
 
 /* Responsiveness */
 
@@ -719,6 +758,7 @@ a {
         font-size: 30px;
         padding: 20px;
     }
+
     .article1 {
         display: flex;
         justify-content: center;
@@ -730,22 +770,23 @@ a {
     .article1 h2 {
         text-align: center;
         font-size: 20px;
-        width: 100%; 
+        width: 100%;
     }
 
     .contador {
-        
+
         font-size: 10px;
         width: 100vw;
         height: 100%;
     }
+
     #countdown {
 
         display: flex;
         justify-content: center;
         align-items: center;
     }
-    
+
     #countdown div {
         text-align: center;
         margin: 10px;
@@ -770,12 +811,14 @@ a {
     .section_5 h2 {
         width: 90%;
         font-size: 25px;
-        
+
     }
-    .article3{
+
+    .article3 {
         width: 100%;
         height: 100%;
     }
+
     .article3 h2 {
         font-size: 20px;
         padding: 20px;
@@ -797,46 +840,54 @@ a {
     #mc_embed_shell h4 {
         font-size: 20px;
     }
-    .section_7{
+
+    .section_7 {
         width: 100%;
         height: 300px;
     }
-    .section_7 img{
+
+    .section_7 img {
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
 
     /* Info */
-    .accordion{
+    .accordion {
         margin: 0;
         max-width: 100%;
     }
-    .accordion-header{
-        
+
+    .accordion-header {
+
         font-size: 25px;
     }
-    .accordion-content{
+
+    .accordion-content {
         font-size: 30px;
     }
-    .maduracion_check{
+
+    .maduracion_check {
         font-size: 20px;
         padding: 40px;
 
     }
 
-    .section_8{
+    .section_8 {
         width: 100%;
         height: 230px;
     }
-    .section_8 h2{
-        
+
+    .section_8 h2 {
+
         font-size: 20px;
     }
-    .section_9 a{
+
+    .section_9 a {
         padding: 10px;
         font-size: 20px;
     }
+
     /* Footer Styles */
     .footer__container {
         padding: 20px;
@@ -857,6 +908,27 @@ a {
     .footer__bar {
         font-size: 16px;
     }
+
+    .popup-content {
+        display: flex;
+        height: 400px;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .close {
+    width: 30px;
+    color: #000;
+    position: absolute;
+
+    
+    right: 10px;
+    cursor: pointer;
+    font-size: 50px;
+    z-index: 1;
+    }
+
+
 }
 
 
