--- a/css/webinar.css
+++ b/css/webinar.css
@@ -86,17 +86,17 @@ body {
 
     26%,
     50% {
-        background-image: url('../assets/im002.jpeg');
+        background-image: url('../assets/banner_img/camara_01.png');
     }
 
     51%,
     75% {
-        background-image: url('../assets/im003.jpeg');
+        background-image: url('../assets/banner_img/camara_02.png');
     }
 
     76%,
     100% {
-        background-image: url('../assets/banner_img/b_001.jpg');
+        background-image: url('../assets/banner_img/camara_03.png');
     }
 }
 
@@ -124,34 +124,12 @@ body {
 }
 
 
-.section_1 {
-
-    width: 100%;
-    height: 250px;
-    background-color: #005C6C;
-}
-
-.section_1 h2 {
-
-    text-transform: uppercase;
-    color: #fefce9;
-    text-align: center;
-    padding: 50px;
-    font-size: 50px;
-
-}
-
-.section_1 h2 span {
-    color: black;
-}
-
-
 
 .card {
     
     margin: auto;
     max-width: 1200px;
-    padding: 50px;
+    padding: 30px;
     place-items: center;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -161,9 +139,8 @@ body {
 .card img {
     border: 10px solid #00AE45;
     object-fit: cover;
-    height: 400px;
     width: 500px;
-
+    height: 300px;
 }
 
 
@@ -216,6 +193,7 @@ body {
 }
 
 .imagen p{
+    text-align: center;
     color: #fff;
     position: absolute;
     width: 200px;
@@ -472,7 +450,7 @@ body {
 }
 
 .container:hover {
-    background-image: url('../assets/banner_img/b_002.jpg');
+    background-image: url('../assets/banner_img/b_004.jpg');
     background-size: cover;
     background-position: center;
     transition: all 0.5s ease-in-out;
