--- a/css/webinar_maduracion.css
+++ b/css/webinar_maduracion.css
@@ -797,6 +797,16 @@ a {
         min-width: 20px;
     }
 
+    .maduracion_check{
+        padding: 10px;
+        font-size: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+    }
     .container {
         display: flex;
         justify-content: center;
@@ -809,8 +819,10 @@ a {
 
 
     .section_5 h2 {
-        width: 90%;
-        font-size: 25px;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+        font-size: 24px;
 
     }
 
