--- a/css/webinar_maduracion.css
+++ b/css/webinar_maduracion.css
@@ -329,6 +329,7 @@ body {
     min-width: 90px;
 }
 
+
 /* -------- */
 .article1 {
     position: relative;
@@ -433,6 +434,24 @@ body {
     font-size: 40px;
 
 }
+
+.section_6 {
+    width: 100%;
+    height: 400px;
+    font-size: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 100px;
+}
+
+.maduracion_check {
+
+    width: 1000px;
+    padding-top: 100px;
+}
+
 
 
 
@@ -797,16 +816,8 @@ a {
         min-width: 20px;
     }
 
-    .maduracion_check{
-        padding: 10px;
-        font-size: 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 100%;
-    }
+
+
     .container {
         display: flex;
         justify-content: center;
@@ -825,6 +836,20 @@ a {
         font-size: 24px;
 
     }
+
+    .maduracion_check {
+        width: 100%;    
+        font-size: 18px;
+        display: flex;
+        flex-direction: column;
+    }
+    .maduracion_check div{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 10px;  
+    }
+
 
     .article3 {
         width: 100%;
@@ -864,20 +889,9 @@ a {
         object-fit: cover;
     }
 
+
     /* Info */
-    .accordion {
-        margin: 0;
-        max-width: 100%;
-    }
 
-    .accordion-header {
-
-        font-size: 25px;
-    }
-
-    .accordion-content {
-        font-size: 30px;
-    }
 
     .section_8 {
         width: 100%;
@@ -923,18 +937,16 @@ a {
     }
 
     .close {
-    width: 30px;
-    color: #000;
-    position: absolute;
+        width: 30px;
+        color: #000;
+        position: absolute;
 
 
-    right: 10px;
-    cursor: pointer;
-    font-size: 50px;
-    z-index: 1;
+        right: 10px;
+        cursor: pointer;
+        font-size: 50px;
+        z-index: 1;
     }
 
 
 }
-
-
