--- a/css/webinar_maduracion.css
+++ b/css/webinar_maduracion.css
@@ -59,18 +59,19 @@ body {
 .text_content h1 {
     padding: 0;
     margin: 0;
-    font-size: 75px;
+    font-size: 60px;
     color: #fff;
 }
 
 .text_content h2 {
-    font-size: 27px;
+    font-weight: 300;
+    font-size: 50px;
     color: #fff;
     margin-bottom: 40px;
 }
 
 .logo {
-    width: 180px;
+    width: 250px;
 
 
 }
@@ -105,211 +106,94 @@ body {
 
 .linea {
     width: 100%;
-    height: 20px;
-    background-color: #005C6C;
-
+    height: 40px;
+    background-color: #005E6C;
 }
 
-.linea1 {
+.seccion_01 {
+    background-image: url('../assets/banner_img/bann.png');
+    background-size: cover;
     width: 100%;
-    height: 20px;
-    background-color: #009AA9;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 40px;
 
 }
 
-.linea2 {
-    width: 100%;
-    height: 20px;
-    background-color: #00AE45;
-
-}
-
-
-.section_1 {
-
-    width: 100%;
-    height: 250px;
-    background-color: #005C6C;
-}
-
-.section_1 h2 {
-
-    text-transform: uppercase;
-    color: #fefce9;
-    text-align: center;
-    padding: 50px;
-    font-size: 50px;
-
-}
-
-.section_1 h2 span {
-    color: black;
-}
-
-
-
-.card {
-
+.s01_container {
+    padding-top: 20px;
+    padding-bottom: 20px;
     margin: auto;
-    max-width: 1200px;
-    padding: 30px;
-    place-items: center;
+    width: 90%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 40px;
 }
 
-.card img {
-    border: 10px solid #00AE45;
-    object-fit: cover;
-    height: 300px;
+.s01_container img {
+    padding-top: 20px;
+    padding-left: 20px;
     width: 500px;
-
+    height: 300px;
 }
 
-
-
-.main img:hover {
-    transform: scale(1.1);
-    transition: all 0.5s ease-in-out;
-}
-
-
-
-.card p {
+.s01_container p {
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+    width: 440px;
+    height: 300px;
+    padding-left: 20px;
     font-weight: 600;
-    text-transform: uppercase;
-    font-size: 27px;
-
-
-}
-
-.section_2 span {
-    padding: 3px;
-    color: #00AE45;
-
-}
-
-.section_3 span {
-    padding: 3px;
-    color: #005C6C;
-
+    font-size: 25px;
+    color: #115C6C;
+    display: grid;
+    align-items: center;
 }
 
 
-.section_3 img {
-    border: 10px solid #005C6C;
-}
+/* ---------- */
 
-/* -------- */
-
-
-.imagen {
-    position: relative;
-    transition: all .3s ease;
-}
-
-.imagen img {
-
-    box-shadow: 0 60px 60px -60px rgba(0, 30, 255, 0.5);
-    border-radius: 4px;
-    object-fit: cover;
-
-}
-
-.imagen p {
-    color: #fff;
-    position: absolute;
-    width: 200px;
-    top: 50%;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    transform: translateY(25%);
-    transition: .3s ease;
-    opacity: 0;
-
-}
-
-.imagen:hover {
-    transform:
-        perspective(250px) rotateX(10deg) translateY(-5%) translateZ(0);
-}
-
-.imagen::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    height: 100%;
+.seccion_02 {
     width: 100%;
-    background-image: linear-gradient(to bottom,
-            rgba(0, 0, 0, 0.5) 50%,
-            rgba(0, 0, 0) 96%);
-    opacity: 0;
-    transition: all .3s ease;
-}
-
-.imagen:hover::before {
-    opacity: 1;
-}
-
-.imagen:hover p {
-    text-align: center;
-    opacity: 1;
-    transform: translateY(25%);
-}
-
-/* --------- */
-.section_4 span {
-    padding: 3px;
-    color: #009AA9;
-
-}
-
-.section_4 img {
-    border: 10px solid #009AA9;
+    background-image: url('../assets/banner_img/fondo-banner-azul.jpg');
+    background-size: cover;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 }
 
 
+.s02_texto {
 
-.accordion {
-    max-width: 80%;
-    margin: 20px auto;
-}
-
-.accordion-item {
-    border-bottom: 1px solid #ddd;
-}
-
-.accordion-header {
+    width: 100%;
+    margin-left: 100px;
+    margin-top: 100px;
     color: #fff;
+}
+
+.s02_texto h2 {
+    text-shadow: 2px 4px 1px rgba(0, 0, 0, 0.5);
     font-size: 40px;
-    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.s02_texto p {
+    text-shadow: 2px 4px 1px rgba(0, 0, 0, 0.5);
     text-transform: uppercase;
-    background-color: #005E6C;
-    padding: 10px 20px;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-}
+    font-size: 20px;
 
-.accordion-header:hover {
-    background-color: #00b14f;
-}
-
-.accordion-content {
-    font-size: 35px;
-    display: none;
-    padding: 10px 20px;
-}
-
-.accordion-item.active .accordion-content {
-    display: block;
 }
 
 /* count */
 .contador {
-    background-color: #000000e9;
+    margin-top: 20px;
+    background-color: #fff;
+}
+
+.contador h2 {
+    color: #005E6C;
+    text-align: center;
+    font-size: 35px;
+
+
 }
 
 #countdown {
@@ -323,139 +207,128 @@ body {
     text-align: center;
     margin: 10px;
     padding: 20px;
-    color: white;
+    color: #005E6C;
     font-weight: 900;
-    font-size: 30px;
+    font-size: 35px;
     min-width: 90px;
+}
+
+.contador h3 {
+    color: #005E6C;
+    text-align: center;
+    font-size: 40px;
+    margin-bottom: 20px;
+    font-weight: 800;
+
 }
 
 
 /* -------- */
-.article1 {
-    position: relative;
-    width: 100%;
 
-    background-image: url('../assets/section.jpg');
+.seccion_03 {
+    background-image: url('../assets/banner_img/fondo-verde-banner.jpg');
     background-size: cover;
-}
-
-.article1::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    /* Color oscuro con transparencia */
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 }
 
-.article1 h2 {
-    position: relative;
-    text-transform: uppercase;
-    color: #ffffff;
-    /* Color de texto blanco */
-    text-align: center;
-    padding: 40px;
-    font-size: 35px;
-}
-
-.article2 {
-    position: relative;
+.s03 {
     width: 100%;
-    height: 250px;
-    background-image: url('../assets/banner_img/camara_02.png');
-    background-size: cover;
+    margin: auto;
+    padding-left: 30px;
 }
 
-
-
-
-.article2::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    /* Color oscuro con transparencia */
-}
-
-.article2 h2 {
-    position: relative;
-    text-transform: uppercase;
-    color: #ffffff;
-    /* Color de texto blanco */
-    text-align: center;
-    padding: 40px;
-    font-size: 35px;
-}
-
-.article3 {
-    position: relative;
-    width: 100%;
-    height: 160px;
-    background-image: url('../assets/im002.jpeg');
-    background-size: cover;
-}
-
-.article3::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    /* Color oscuro con transparencia */
-}
-
-.article3 h2 {
-    position: relative;
-    text-transform: uppercase;
-    color: #ffffff;
-    /* Color de texto blanco */
-    text-align: center;
-    padding: 40px;
-    font-size: 30px;
-}
-
-.section_5 {
-    width: 100%;
-
-    background-color: #000000e9;
-}
-
-.section_5 h2 {
-    padding: 10px;
-    text-transform: uppercase;
+.s03 h2 {
+    text-shadow: 2px 4px 1px rgba(0, 0, 0, 0.5);
     color: #fff;
-    text-align: center;
-    padding-top: 20px;
-    margin: auto;
     font-size: 40px;
-
+    margin-bottom: 20px;
 }
 
-.section_06 {
+.s03 p {
+    text-shadow: 2px 4px 1px rgba(0, 0, 0, 0.5);
+    color: #fff;
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+/* --------------- */
+.seccion_04 {
+    background-image: url('../assets/banner_img/bann1.png');
+    background-size: cover;
     width: 100%;
-    font-size: 32px;
-    margin: auto;
-    padding-top: 30px;
-    padding-bottom: 30px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+
+
 }
-.maduracion_check {
+
+.superior {
+    padding: 30px;
+    margin: auto;
+    width: 1000px;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.cont {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
+
+.cont {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.img {
     width: 1000px;
 }
-.maduracion_check p{
-    padding-bottom: 20px;
+
+.cont img {
+    width: 100px;
+    margin: auto;
 }
 
+.cont p {
+    text-shadow: 2px 4px 1px rgba(17, 59, 82, 0.5);
+    text-align: center;
+    font-size: 30px;
+    color: #005E6C;
+    font-weight: 800;
 
+}
 
+.inferior {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.cont1 {
+    padding: 20px;
+    margin: auto;
+}
+
+.cont1 h2 {
+
+    padding-left: 100px;
+    color: #00AE45;
+    font-size: 50px;
+
+    font-weight: bold;
+}
+
+.cont1 p {
+
+    color: #005E6C;
+    font-size: 23px;
+    margin-bottom: 20px;
+    font-weight: 800;
+}
 
 
 
@@ -474,17 +347,16 @@ body {
 }
 
 .container {
-    background-image: url('../assets/banner_img/b_001.jpg');
-    background-size: cover;
+
     background-position: center;
     position: relative;
-    width: 700px;
+    width: 500px;
     text-align: center;
     margin-top: 50px;
     margin-bottom: 50px;
-
+    background-color: #fff;
     background-size: cover;
-    color: #fff;
+    color: black;
 }
 
 .container::before {
@@ -495,24 +367,10 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: white;
     /* Ajusta el valor alfa para controlar la opacidad */
 }
 
-.container:hover {
-    background-image: url('../assets/banner_img/b_003.jpg');
-    background-size: cover;
-    background-position: center;
-    transition: all 0.5s ease-in-out;
-
-}
-
-.container h3 {
-    text-transform: uppercase;
-    color: #005E6C;
-    font-size: 40px;
-    margin-bottom: 20px;
-}
 
 #mc_embed_shell h4 {
     font-size: 30px;
@@ -521,110 +379,33 @@ body {
     text-align: center;
 }
 
-.section_7 {
-    margin: auto;
-    display: flex;
-    width: 1180px;
-    height: 500px;
-    margin-bottom: 20px;
+.seccion_05 {
 
-}
-
-.section_7 img {
-    border-radius: 10px;
-    margin: auto;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.section_8 {
+    background-position: center;
     position: relative;
     width: 100%;
-    height: 250px;
-    background-image: url('../assets/im002.jpeg');
+    height: 500px;
+    text-align: center;
+    background-image: url('../assets/im001.jpeg');
     background-size: cover;
+    color: black;
 }
 
-.section_8::before {
+.seccion_05::before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    /* Color oscuro con transparencia */
+    background-color: rgba(28, 95, 53, 0.264);
+    /* Ajusta el valor alfa para controlar la opacidad */
 }
-
-.section_8 h2 {
-    position: relative;
-    text-transform: uppercase;
-    color: #ffffff;
-    /* Color de texto blanco */
-    text-align: center;
-    padding: 40px;
-    font-size: 38px;
-}
-
-
-/* ======================================================== */
-
-.section_8 {
-    width: 100%;
-    height: 130px;
-    background-color: #00AE45;
-}
-
-.section_8 h2 {
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 30px;
-    font-weight: 700;
-    padding-top: 20px;
-    color: #fff;
-}
-
-.section_9 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 180px;
-
-}
-
-.section_9 a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 50px;
-    width: 50%;
-    height: 50%;
-    border-radius: 10px;
-    background-color: #005C6C;
-    text-align: center;
-    text-transform: uppercase;
-    color: #fff;
-    transition: all 0.3s;
-}
-
-.section_9 a:hover {
-    background-color: #00AE45;
-    color: #fff;
-    transform: scale(1.1);
-
-}
-
-
-
-
-
 
 
 /* Footer Styles */
 .footer {
-    background-color: #000;
+    background-color: #005E6C;
 }
 
 .footer__container {
@@ -747,53 +528,59 @@ a {
         /* Reducir el tamaño del logo en dispositivos móviles */
     }
 
-    /* Secciones */
-    .section_1 {
-        padding-bottom: 30px;
-    }
-
-    .section_1 h2 {
-        font-size: 30px;
-        padding: 20px;
-    }
-
-    .card {
-        padding: 20px;
-        grid-template-columns: 1fr;
-    }
-
-    .card img {
-        height: auto;
-        width: 90%;
-    }
-
-    .card p {
-        font-size: 18px;
-    }
-
-    .article2 {
-        width: 100%;
-        height: 100%;
-    }
-
-    .article2 h2 {
-        font-size: 30px;
-        padding: 20px;
-    }
-
-    .article1 {
+    /* ------- */
+    .seccion_01 {
+        background-color: #f5f5f5;
+        width: 100px;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 100%;
-        height: 100%;
     }
 
-    .article1 h2 {
-        text-align: center;
-        font-size: 20px;
-        width: 100%;
+    .s01_container {
+        display: flex;
+        flex-direction: column;
+
     }
+
+    .s01_container img {
+        padding-left: 30px;
+        padding-bottom: 20px;
+        width: 300px;
+        height: 200px;
+    }
+
+    .s01_container p {
+        text-align: center;
+        width: 300px;
+        height: 200px;
+        font-size: 20px;
+    }
+
+    /* Seccion 02 */
+    .seccion_02 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .s02_texto {
+        width: 80%;
+        margin-left: 0;
+        margin-top: 0;
+
+        text-align: center;
+    }
+
+    .seccion_02 img {
+        width: 300px;
+        height: 200px;
+    }
+
+
+    /* count */
 
     .contador {
 
@@ -813,58 +600,25 @@ a {
         text-align: center;
         margin: 10px;
         padding: 12px;
-        color: white;
+        color: #005E6C;
         font-weight: 900;
-        font-size: 16px;
+        font-size: 18px;
         min-width: 20px;
     }
 
-
-
-    .container {
+    .seccion_03 {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 100%;
-        margin: 0;
-        padding: 0;
-    }
-
-    .section_5 h2 {
-        text-align: center;
-        width: 100%;
-        height: 100%;
-        font-size: 24px;
-
-    }
-
-    .section_6 {
-        width: 100%;
-        font-size: 15px;
-        margin: auto;
-        padding-top: 30px;
-        padding-bottom: 30px;
     }
 
 
 
-    .article3 {
-        width: 100%;
-        height: 100%;
-    }
-
-    .article3 h2 {
-        font-size: 20px;
-        padding: 20px;
-    }
 
     /* Formulario de contacto */
-    .animate-bg {
-        margin-left: 0;
-    }
-
     .container {
-        width: 100%;
+        width: 80%;
     }
 
     .container h3 {
@@ -875,35 +629,36 @@ a {
         font-size: 20px;
     }
 
-    .section_7 {
-        width: 100%;
-        height: 300px;
-    }
-
-    .section_7 img {
+    .seccion_04 {
         width: 100%;
         height: 100%;
-        object-fit: cover;
     }
 
+    .superior {
+        display: none;
+
+    }
+
+    .inferior {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .cont1 h2 {
+        padding-left: 0;
+
+    }
+
+    .seccion_05 {
+        width: 100%;
+        height: 300px;
+
+    }
 
     /* Info */
 
 
-    .section_8 {
-        width: 100%;
-        height: 230px;
-    }
-
-    .section_8 h2 {
-
-        font-size: 20px;
-    }
-
-    .section_9 a {
-        padding: 10px;
-        font-size: 20px;
-    }
 
     /* Footer Styles */
     .footer__container {
