--- a/css/webinar_maduracion.css
+++ b/css/webinar_maduracion.css
@@ -1,6 +1,4 @@
-/* Estilos generales */
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;500;600;700&family=Onest:wght@300;400;600&family=Roboto+Slab&family=Roboto:wght@400;700&display=swap');
+
 
 * {
     margin: 0;
@@ -12,7 +10,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f5f5f5;
-    font-family: "Onest", sans-serif;
+    font-family: "Inter", sans-serif;
     line-height: 1.6;
 }
 
@@ -138,11 +136,11 @@ body {
 }
 
 .s01_container p {
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+   
     width: 440px;
     height: 300px;
     padding-left: 20px;
-    font-weight: 600;
+    font-weight: 800;
     font-size: 25px;
     color: #115C6C;
     display: grid;
@@ -170,13 +168,13 @@ body {
 }
 
 .s02_texto h2 {
-    text-shadow: 2px 4px 1px rgba(0, 0, 0, 0.5);
+    
     font-size: 40px;
     margin-bottom: 20px;
 }
 
 .s02_texto p {
-    text-shadow: 2px 4px 1px rgba(0, 0, 0, 0.5);
+    
     text-transform: uppercase;
     font-size: 20px;
 
@@ -208,7 +206,7 @@ body {
     margin: 10px;
     padding: 20px;
     color: #005E6C;
-    font-weight: 900;
+    font-weight: 500;
     font-size: 35px;
     min-width: 90px;
 }
@@ -241,14 +239,14 @@ body {
 }
 
 .s03 h2 {
-    text-shadow: 2px 4px 1px rgba(0, 0, 0, 0.5);
+    
     color: #fff;
     font-size: 40px;
     margin-bottom: 20px;
 }
 
 .s03 p {
-    text-shadow: 2px 4px 1px rgba(0, 0, 0, 0.5);
+    
     color: #fff;
     font-size: 30px;
     margin-bottom: 20px;
@@ -295,7 +293,7 @@ body {
 }
 
 .cont p {
-    text-shadow: 2px 4px 1px rgba(17, 59, 82, 0.5);
+    
     text-align: center;
     font-size: 30px;
     color: #005E6C;
@@ -319,7 +317,7 @@ body {
     color: #00AE45;
     font-size: 50px;
 
-    font-weight: bold;
+    font-weight: 800;
 }
 
 .cont1 p {
