--- a/css/webinar_maduracion.css
+++ b/css/webinar_maduracion.css
@@ -155,7 +155,13 @@ body {
     background-image: url('../assets/banner_img/fondo-banner-azul.jpg');
     background-size: cover;
     display: grid;
+    gap: 100px;
     grid-template-columns: repeat(2, 1fr);
+}
+
+.seccion_02 img {
+    width: 100%;
+    height: 500px;
 }
 
 
@@ -528,12 +534,13 @@ a {
 
     /* ------- */
     .seccion_01 {
-        background-color: #f5f5f5;
         width: 100px;
         display: flex;
         flex-direction: column;
         justify-content: center;
+        padding-left: 20px;
         align-items: center;
+        padding-bottom: 20px;
     }
 
     .s01_container {
@@ -558,6 +565,7 @@ a {
 
     /* Seccion 02 */
     .seccion_02 {
+        padding-top: 10px;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -568,14 +576,18 @@ a {
         width: 80%;
         margin-left: 0;
         margin-top: 0;
-
         text-align: center;
+    }
+    .s02_texto p{
+        font-size: 25px;
     }
 
     .seccion_02 img {
-        width: 300px;
-        height: 200px;
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
     }
+
 
 
     /* count */
@@ -605,10 +617,14 @@ a {
     }
 
     .seccion_03 {
+        width: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
+
+    }
+    .s03 p{
+        width: 80%;
+        font-size: 30px;
     }
 
 
@@ -647,7 +663,6 @@ a {
         padding-left: 0;
 
     }
-
     .seccion_05 {
         width: 100%;
         height: 300px;
