--- a/css/webinar_maduracion.css
+++ b/css/webinar_maduracion.css
@@ -534,12 +534,9 @@ a {
 
     /* ------- */
     .seccion_01 {
-        width: 100px;
+        width: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        padding-left: 20px;
-        align-items: center;
         padding-bottom: 20px;
     }
 
@@ -621,6 +618,10 @@ a {
         display: flex;
         flex-direction: column;
 
+    }
+    .s03{
+        padding-top: 50px;
+        width: 80%
     }
     .s03 p{
         width: 80%;
