--- a/css/webinar_maduracion.css
+++ b/css/webinar_maduracion.css
@@ -1,5 +1,3 @@
-
-
 * {
     margin: 0;
     padding: 0;
@@ -160,8 +158,10 @@ body {
 }
 
 .seccion_02 img {
+
     width: 100%;
     height: 500px;
+    object-fit: cover;
 }
 
 
