--- a/css/banner.css
+++ b/css/banner.css
@@ -111,7 +111,28 @@
 }
 
 
+/* hojaaa */
+.hoja{
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    position: absolute;
+    top: 960px;
+    left: 5px;
+    z-index: 2;
+}
 
+.hoja2{
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    position: absolute;
+    top: 2600px;
+    left: 1020px;
+    z-index: 2;
+    rotate: 180deg;
+
+}
 
 /* --------SECCION 3-------------- */
 
@@ -131,26 +152,60 @@
 
 /*  SECCION 4*/
 
-.seccion_04{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr); 
+.seccion_04 {
+    display: flex;
+    justify-content: center;
 }
 
-.card{
-    margin: auto;
-    width: 90%;
-    height: 38rem;
+.card {
+    width: 400px;
+    height: 600px;
+    margin: 0 10px;
+    perspective: 1000px;
+    border-radius: 10px;
+}
+
+.card .front,
+.card .back {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+}
+
+.card .front {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 10px;
+    transition: transform 0.5s;
 }
+
+.card .back {
+    display: none;
+    padding: 20px;
+    transform: rotateY(180deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    transition: transform 0.5s;
+}
+
+.card.flipped .front {
+    transform: rotateY(-180deg);
+}
+
+.card.flipped .back {
+    transform: rotateY(0deg);
+    display: flex;
+}
+
 .card p{
     width: 80%;
     text-align: center;
     color: white;
     font-weight: 500;
-    font-size: 28px;   
+    font-size: 25px;   
     position: relative;
 }
 
@@ -168,12 +223,12 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(12, 110, 222, 0.3);
+    background-color: rgba(12, 110, 222, 0.227);
     border-radius: 10px;
 }
 
 .dos{  
-    background-image: url('../assets/card1.png');
+    background-image: url('../assets/card2.jpg');
     position: relative;
     background-size: cover;
 
@@ -186,12 +241,12 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(12, 110, 222, 0.3);
+    background-color: rgba(12, 110, 222, 0.21);
     border-radius: 10px;
 }
 
 .tres{  
-    background-image: url('../assets/card1.png');
+    background-image: url('../assets/card3.jpg');
     position: relative;
     background-size: cover;
 
@@ -204,7 +259,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(12, 110, 222, 0.3);
+    background-color: rgba(12, 110, 222, 0.219);
     border-radius: 10px;
 
 }
@@ -449,8 +504,22 @@
     height: 100%;
     color: #fff;
     margin-top: 30px;
-    background-color: #00AF48;
+    background-image: url('../assets/ban001.jpg');
+    object-fit: cover;
+    position: relative;
+    z-index: 1;
 
+}
+
+.seccion_11::before{
+    content: " ";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(39, 169, 52, 0.799);
+    z-index: -1;
 }
 .seccion_11 h2{
     margin: auto;
@@ -458,6 +527,7 @@
     text-align: center;
     font-size: 52px;
     font-weight: 900;
+    z-index: 1;
     
 }
 
